modified javascript file

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <script src="script.js"></script>
 </head>
 <body>
+    <dir id="display">Name: </dir>
     <h1>JavaScript Project</h1>
     
 </body>
